re-run pipeline to get 2024 fall dates

--- a/pipeline/4.1-get-attendance.ipynb
+++ b/pipeline/4.1-get-attendance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,12 @@
     "# https://www.pro-football-reference.com/teams/chi/2024.htm#all_games\n",
     "# https://www.pro-football-reference.com/years/2024/attendance.htm\n",
     "# https://www.basketball-reference.com/teams/CHI/2025_games.html\n",
-    "# https://www.hockey-reference.com/teams/CHI/2025_games.html"
+    "# https://www.basketball-reference.com/teams/CHI/2024_games.html\n",
+    "# https://www.hockey-reference.com/teams/CHI/2025_games.html\n",
+    "# https://www.hockey-reference.com/teams/CHI/2024_games.html\n",
+    "\n",
+    "# I manually named the home/away column in most of these, \n",
+    "# to avoid future column order errors integrating other years."
    ]
   },
   {
@@ -34,14 +39,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "cubs_file = \"../data/raw/scores-2024-cubs.csv\"\n",
     "sox_file = \"../data/raw/scores-2024-whitesox.csv\"\n",
-    "hawks_file = \"../data/raw/scores-2024-blackhawks.csv\"\n",
-    "bulls_file = \"../data/raw/scores-2024-bulls.csv\"\n",
+    "hawks24_file = \"../data/raw/scores-2024-blackhawks.csv\"\n",
+    "hawks25_file = \"../data/raw/scores-2025-blackhawks.csv\"\n",
+    "bulls24_file = \"../data/raw/scores-2024-bulls.csv\"\n",
+    "bulls25_file = \"../data/raw/scores-2025-bulls.csv\"\n",
     "stars_file = \"../data/raw/scores-2024-redstars.csv\"\n",
     "nfl_file = \"../data/raw/scores-2024-nfl.csv\"\n",
     "bears_file = \"../data/raw/scores-2024-bears.csv\"\n",
@@ -50,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "cubs = pd.read_csv(cubs_file)\n",
     "sox = pd.read_csv(sox_file)\n",
-    "hawks = pd.read_csv(hawks_file)\n",
-    "bulls = pd.read_csv(bulls_file)\n",
+    "hawks = pd.concat([pd.read_csv(hawks24_file),pd.read_csv(hawks25_file)])\n",
+    "bulls = pd.concat([pd.read_csv(bulls24_file),pd.read_csv(bulls25_file)])\n",
     "stars = pd.read_csv(stars_file, sep='\\t', thousands=\",\")\n",
     "fire = pd.read_csv(fire_file, sep='\\t', thousands=\",\")\n",
     "nfl = pd.read_csv(nfl_file)\n",
@@ -73,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +90,7 @@
     "    dates = pd.Series([f\"2024-{m}-{d.rjust(2,'0')}\" for m,d in zip(months, days)], name='date')\n",
     "    dates = pd.to_datetime(dates, format=\"%Y-%b-%d\")\n",
     "\n",
-    "    home = (df['Unnamed: 4'] != '@').rename('home')\n",
+    "    home = (df['@'] != '@').rename('home')\n",
     "    attend = df['Attendance'].rename('attendance')\n",
     "\n",
     "    df = pd.concat([dates, home, attend], axis=1)\n",
@@ -92,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,41 +117,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "dates = pd.to_datetime(hawks['Date'].rename('date'), format=\"%Y-%m-%d\")\n",
-    "home = (hawks['Unnamed: 3'] != '@').rename('home')\n",
+    "home = (hawks['@'] != '@').rename('home')\n",
     "attend = hawks['Att.'].rename('attendance')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "hawks_clean = pd.concat([dates, home, attend], axis=1)"
+    "hawks_clean = pd.concat([dates, home, attend], axis=1)\n",
+    "hawks_clean = hawks_clean.loc[hawks_clean.attendance.notna()] # Drops games that haven't been played yet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "dates = pd.to_datetime(bulls['Date'].rename('date'), format=\"%a %b %d %Y\")\n",
-    "home = (bulls['Unnamed: 5'] != '@').rename('home')\n",
+    "home = (bulls['@'] != '@').rename('home')\n",
     "attend = bulls['Attend.'].rename('attendance')\n",
     "\n",
-    "bulls_clean = pd.concat([dates, home, attend], axis=1)"
+    "bulls_clean = pd.concat([dates, home, attend], axis=1)\n",
+    "bulls_clean = bulls_clean.loc[bulls_clean.attendance.notna()] # Drops games that haven't been played yet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,11 +250,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "attend = attend.loc[attend['home']].drop(columns=['home'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping these NaN attendance games:\n",
+      "           team       date\n",
+      "index                     \n",
+      "16     whitesox 2024-04-17\n",
+      "41     whitesox 2024-05-14\n",
+      "93     whitesox 2024-07-10\n",
+      "132    whitesox 2024-08-27\n",
+      "6         bears        NaT\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Dropping these NaN attendance games:\")\n",
+    "print(attend[attend.attendance.isna() | (attend.attendance == 0)][['team','date']])\n",
+    "attend = attend.loc[attend.attendance.notna()]"
    ]
   },
   {
@@ -258,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
