--- a/pipeline/5-get-ridership.ipynb
+++ b/pipeline/5-get-ridership.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "cta_client = CTAClient(60)\n",
     "divvy_client = DivvyClient()\n",
-    "uber_client = UberClient(60*15)"
+    "uber_client = UberClient(60*25) # XXX: put back to 60*15 later"
    ]
   },
   {
@@ -74,11 +74,16 @@
    "source": [
     "Looking ahead, we use models with -1 week, -1 month, and -1 YTD, at daily granularity.\n",
     "\n",
-    "Therefore we will pull in data from JANUARY 1, 2024 through AUGUST 31, 2024.\n",
+    "Therefore we will pull in data from JANUARY 1, 2024 through DECEMBER 31, 2024.\n",
     "\n",
     "Note: we want to finish the whole month of August to ensure we have a FULL \n",
     "week of data for the DNC. Otherwise we may mis-infer a weekly/monthly effect of DNC on ridership\n",
-    "when actually we just mechanically omitted some days!"
+    "when actually we just mechanically omitted some days!\n",
+    "\n",
+    "Also, since the Damen Green line stop opened up the week of the DNC, we want to\n",
+    "include some post-DNC days to offset that contemporaneous event.\n",
+    "\n",
+    "XXX Jan 9 2025: For some reason, the uber client is returning 0 rows for December 2024."
    ]
   },
   {
@@ -88,7 +93,7 @@
    "outputs": [],
    "source": [
     "data_start_iso = dt(2024, 1, 1).isoformat()\n",
-    "data_end_iso = dt(2024, 8, 31, 23, 59, 59).isoformat()"
+    "data_end_iso = dt(2024, 11, 30, 23, 59, 59).isoformat()"
    ]
   },
   {
@@ -168,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +194,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "10it [02:49, 16.99s/it]\n"
+      "12it [02:15, 11.28s/it]\n"
      ]
     }
    ],
@@ -206,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
