--- a/notebooks/replication/dnc-attend/baseline.ipynb
+++ b/notebooks/replication/dnc-attend/baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table_out = \"../../../reports/replication/tract-balance-attend.md\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,23 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[52], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Why is UC and MC not here?\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m tract_panel\u001b[38;5;241m.\u001b[39mstadium\u001b[38;5;241m.\u001b[39mnunique() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m5\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# TODO: XXX: Why is UC and MC not here?\n",
     "assert tract_panel.stadium.nunique() == 5"
    ]
   },
@@ -84,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -134,37 +130,37 @@
             "lon: mean"
            ],
            [
-            61,
-            15,
-            3,
+            83,
+            52,
+            5,
             -1.58,
-            1.69,
-            0.12,
-            -1.23,
-            1.8,
-            0.3
+            1.67,
+            -0.07,
+            -2.41,
+            1.81,
+            0.11
            ],
            [
-            21,
-            6,
-            3,
+            29,
+            20,
+            5,
             -1.51,
-            1.65,
-            0.07,
-            -1.23,
-            1.28,
-            0.24
+            1.64,
+            -0.11,
+            -2.25,
+            1.29,
+            0
            ],
            [
-            77,
-            13,
-            3,
+            104,
+            53,
+            5,
             -1.59,
-            1.75,
-            0.26,
-            -1.23,
-            1.8,
-            0.15
+            1.74,
+            0.05,
+            -2.41,
+            1.81,
+            -0.06
            ]
           ]
          },
@@ -1019,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1068,49 +1064,49 @@
             "rides: mean"
            ],
            [
-            61,
-            15,
-            3,
+            83,
+            52,
+            5,
             -1.58,
-            1.69,
-            0.12,
-            -1.23,
-            1.8,
-            0.3,
-            126,
+            1.67,
+            -0.07,
+            -2.41,
+            1.81,
+            0.11,
+            226,
             1,
-            1931,
-            127.17
+            2172,
+            108.89
            ],
            [
-            21,
-            6,
-            3,
+            29,
+            20,
+            5,
             -1.51,
-            1.65,
-            0.07,
-            -1.23,
-            1.28,
-            0.24,
-            126,
-            173,
+            1.64,
+            -0.11,
+            -2.25,
+            1.29,
+            0,
+            261,
+            23,
             45094,
-            3550.48
+            3096.42
            ],
            [
-            77,
-            13,
-            3,
+            104,
+            53,
+            5,
             -1.59,
-            1.75,
-            0.26,
-            -1.23,
-            1.8,
-            0.15,
-            126,
+            1.74,
+            0.05,
+            -2.41,
+            1.81,
+            -0.06,
+            276,
             1,
-            17004,
-            577.57
+            36410,
+            734.97
            ]
           ]
          },
@@ -1973,31 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['date', 'id', 'transit', 'UCMP', 'airport', 'lat', 'long', 'stadium',\n",
-       "       'train_distance', 'train_contained', 'bike_distance', 'bike_contained',\n",
-       "       'uber_distance', 'uber_contained', 'rides', 'attendance', 'DNC',\n",
-       "       'is_weekend', 'dotw', 'monthofyear'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tract_panel.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,76 +2039,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                                         0                  1                 P-Value\n",
-      "--------------------------  ---------------------------  -----------------  ----------------  ---------\n",
-      "tracts                                                   125                34\n",
-      "transit, n (%)              bike                         46 (36.8)          15 (44.1)         0.378\n",
-      "                            train                        15 (12.0)          6 (17.6)\n",
-      "                            uber                         64 (51.2)          13 (38.2)\n",
-      "lat, mean (SD)                                           0.4 (1.2)          -0.8 (0.2)        <0.001\n",
-      "long, mean (SD)                                          0.0 (0.7)          0.9 (0.6)         <0.001\n",
-      "stadium, n (%)              GUARANTEED RATE FIELD 1600m  37 (29.6)          16 (47.1)         <0.001\n",
-      "                            SOLDIER FIELD 1600m          11 (8.8)           18 (52.9)\n",
-      "                            WRIGLEY FIELD 1600m          77 (61.6)\n",
-      "train_distance, mean (SD)                                1910.6 (1168.0)    2792.2 (1177.7)   <0.001\n",
-      "train_contained, mean (SD)                               1.3 (1.3)          1.1 (0.3)         0.113\n",
-      "bike_distance, mean (SD)                                 787.4 (352.7)      911.3 (683.3)     0.314\n",
-      "bike_contained, mean (SD)                                2.4 (2.8)          3.2 (2.4)         0.101\n",
-      "tract-days                                               7158               1308\n",
-      "daily rides, mean (SD)                                   799.4 (2062.8)     410.4 (1004.4)    <0.001\n",
-      "attendance, mean (SD)                                    30508.0 (10988.3)  18565.0 (8028.5)  <0.001\n",
-      "is_weekend, n (%)           False                        4610 (64.4)        779 (59.6)        0.001\n",
-      "                            True                         2548 (35.6)        529 (40.4)\n",
-      "monthofyear, n (%)          03                           123 (1.7)          84 (6.4)          <0.001\n",
-      "                            04                           1362 (19.0)        245 (18.7)\n",
-      "                            05                           1591 (22.2)        291 (22.2)\n",
-      "                            06                           1489 (20.8)        240 (18.3)\n",
-      "                            07                           1325 (18.5)        208 (15.9)\n",
-      "                            08                           1268 (17.7)        240 (18.3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(tract_balance.tabulate(tablefmt='simple'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                     0                  1                 P-Value\n",
-      "----------------------  ---------------------------  -----------------  ----------------  ---------\n",
-      "stations                                             87                 18\n",
-      "transit, n (%)          bike                         75 (86.2)          16 (88.9)         1.000\n",
-      "                        train                        12 (13.8)          2 (11.1)\n",
-      "lat, mean (SD)                                       0.3 (1.3)          -0.7 (0.2)        <0.001\n",
-      "long, mean (SD)                                      0.0 (0.8)          1.0 (0.3)         <0.001\n",
-      "stadium, n (%)          GUARANTEED RATE FIELD 1600m  25 (28.7)          2 (11.1)          <0.001\n",
-      "                        SOLDIER FIELD 1600m          14 (16.1)          16 (88.9)\n",
-      "                        WRIGLEY FIELD 1600m          48 (55.2)\n",
-      "station-days                                         4176               342\n",
-      "daily rides, mean (SD)                               551.6 (1661.0)     232.6 (791.0)     <0.001\n",
-      "attendance, mean (SD)                                30408.0 (11026.7)  20286.5 (9722.8)  <0.001\n",
-      "is_weekend, n (%)       False                        2652 (63.5)        139 (40.6)        <0.001\n",
-      "                        True                         1524 (36.5)        203 (59.4)\n",
-      "monthofyear, n (%)      03                           82 (2.0)           38 (11.1)         <0.001\n",
-      "                        04                           784 (18.8)         72 (21.1)\n",
-      "                        05                           924 (22.1)         90 (26.3)\n",
-      "                        06                           852 (20.4)         44 (12.9)\n",
-      "                        07                           778 (18.6)         54 (15.8)\n",
-      "                        08                           756 (18.1)         44 (12.9)\n"
+      "                                                             0                  1                  P-Value\n",
+      "----------------------  -----------------------------------  -----------------  -----------------  ---------\n",
+      "stations                                                     87                 55\n",
+      "transit, n (%)          bike                                 75 (86.2)          47 (85.5)          1.000\n",
+      "                        train                                12 (13.8)          8 (14.5)\n",
+      "lat, mean (SD)                                               0.3 (1.3)          -0.4 (0.4)         <0.001\n",
+      "long, mean (SD)                                              0.0 (0.8)          -0.3 (1.2)         0.068\n",
+      "stadium, n (%)          GUARANTEED RATE FIELD 1600m          25 (28.7)                             <0.001\n",
+      "                        SOLDIER FIELD 1600m                  14 (16.1)\n",
+      "                        WRIGLEY FIELD 1600m                  48 (55.2)\n",
+      "                        HYATT REGENCY MCCORMICK PLACE 1600m                     22 (40.0)\n",
+      "                        UNITED CENTER 1600m                                     33 (60.0)\n",
+      "station-days                                                 4313               4902\n",
+      "daily rides, mean (SD)                                       660.4 (1825.6)     233.2 (725.8)      <0.001\n",
+      "attendance, mean (SD)                                        30587.0 (10824.2)  42632.1 (26464.8)  <0.001\n",
+      "is_weekend, n (%)       False                                2722 (63.1)        3497 (71.3)        <0.001\n",
+      "                        True                                 1591 (36.9)        1405 (28.7)\n",
+      "monthofyear, n (%)      03                                   82 (1.9)           1094 (22.3)        <0.001\n",
+      "                        04                                   784 (18.2)         896 (18.3)\n",
+      "                        05                                   924 (21.4)         554 (11.3)\n",
+      "                        06                                   852 (19.8)         158 (3.2)\n",
+      "                        07                                   778 (18.0)         184 (3.8)\n",
+      "                        08                                   735 (17.0)         42 (0.9)\n",
+      "                        09                                   152 (3.5)          10 (0.2)\n",
+      "                        10                                   6 (0.1)            46 (0.9)\n",
+      "                        01                                                      873 (17.8)\n",
+      "                        02                                                      1045 (21.3)\n"
      ]
     }
    ],
@@ -2146,23 +2082,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                 0                  1                  P-Value\n",
+      "--------------------------  -----------------------------------  -----------------  -----------------  ---------\n",
+      "tracts                                                           125                91\n",
+      "transit, n (%)              bike                                 46 (36.8)          37 (40.7)          0.541\n",
+      "                            train                                15 (12.0)          14 (15.4)\n",
+      "                            uber                                 64 (51.2)          40 (44.0)\n",
+      "lat, mean (SD)                                                   0.4 (1.2)          -0.4 (0.4)         <0.001\n",
+      "long, mean (SD)                                                  0.0 (0.7)          -0.4 (1.2)         0.006\n",
+      "stadium, n (%)              GUARANTEED RATE FIELD 1600m          37 (29.6)                             <0.001\n",
+      "                            SOLDIER FIELD 1600m                  11 (8.8)\n",
+      "                            WRIGLEY FIELD 1600m                  77 (61.6)\n",
+      "                            HYATT REGENCY MCCORMICK PLACE 1600m                     34 (37.4)\n",
+      "                            UNITED CENTER 1600m                                     57 (62.6)\n",
+      "train_distance, mean (SD)                                        1910.6 (1168.0)    2216.0 (1015.3)    0.042\n",
+      "train_contained, mean (SD)                                       1.3 (1.3)          1.1 (0.3)          0.115\n",
+      "bike_distance, mean (SD)                                         787.4 (352.7)      852.6 (514.5)      0.298\n",
+      "bike_contained, mean (SD)                                        2.4 (2.8)          3.1 (3.0)          0.087\n",
+      "tract-days                                                       8202               9343\n",
+      "daily rides, mean (SD)                                           903.3 (2270.4)     788.0 (1779.7)     <0.001\n",
+      "attendance, mean (SD)                                            30683.5 (10691.7)  39679.6 (26167.9)  <0.001\n",
+      "is_weekend, n (%)           False                                5223 (63.7)        6606 (70.7)        <0.001\n",
+      "                            True                                 2979 (36.3)        2737 (29.3)\n",
+      "monthofyear, n (%)          03                                   123 (1.5)          1815 (19.4)        <0.001\n",
+      "                            04                                   1362 (16.6)        1458 (15.6)\n",
+      "                            05                                   1591 (19.4)        922 (9.9)\n",
+      "                            06                                   1489 (18.2)        410 (4.4)\n",
+      "                            07                                   1325 (16.2)        396 (4.2)\n",
+      "                            08                                   1234 (15.0)        225 (2.4)\n",
+      "                            09                                   1045 (12.7)        139 (1.5)\n",
+      "                            10                                   21 (0.3)           278 (3.0)\n",
+      "                            11                                   12 (0.1)           391 (4.2)\n",
+      "                            01                                                      1562 (16.7)\n",
+      "                            02                                                      1747 (18.7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tract_balance.tabulate(tablefmt='simple'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# XXX: Don't overwrite the dnc-effect table. Make new table for attendance model if you want to report it.\n",
     "\n",
-    "# with open(\"../../../reports/replication/tract-balance.md\",\"w\") as f:\n",
-    "#     f.write(tract_balance.tabulate(headers=['Not Near DNC', 'Near DNC', 'P-Value'],tablefmt=\"github\"))\n",
-    "# !cp ../../../reports/replication/tract-balance.md ../../../../eric-mc2-cv/static/uploads/"
+    "with open(table_out,\"w\") as f:\n",
+    "    f.write(tract_balance.tabulate(headers=['Not Near DNC', 'Near DNC', 'P-Value'],tablefmt=\"github\"))\n",
+    "!cp $table_out ../../../../eric-mc2-cv/static/uploads/"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
