--- a/pipeline/1-get-cta-stations.ipynb
+++ b/pipeline/1-get-cta-stations.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import geopandas as gpd\n",
     "from shapely.geometry import shape\n",
+    "from shapely.ops import linemerge, unary_union\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -138,6 +139,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This table is station-to-station segments. Need to merge into one row per line.\n",
+    "\n",
+    "def merge_lines(x: gpd.GeoSeries):\n",
+    "    merged = unary_union(x)\n",
+    "    return linemerge(merged) if merged.is_simple else merged\n",
+    "\n",
+    "crs = train_lines.crs\n",
+    "train_lines = train_lines.groupby('line', as_index=False)['geometry'].agg(merge_lines)\n",
+    "train_lines = train_lines.set_crs(crs)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -146,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
