rerunning pipeline. shows slight change in src data

--- a/pipeline/5.1-get-divvy-gbfs.ipynb
+++ b/pipeline/5.1-get-divvy-gbfs.ipynb
@@ -83,13 +83,24 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping 1 stations with non-PK id,name\n"
+     ]
+    }
+   ],
    "source": [
     "# id,name is the composite PK\n",
     "assert all(bike_stations.groupby(['station_id','station_name'],dropna=False).size() == 1)\n",
     "# id to name is at least m:1\n",
     "assert all(bike_stations.groupby(['station_id']).station_name.nunique() == 1)\n",
     "# name to id is 1:Null or 1:1\n",
+    "mask = bike_stations.duplicated(subset=['station_name','geometry'])\n",
+    "print(f\"Dropping {mask.sum()} stations with non-PK id,name\")\n",
+    "bike_stations = bike_stations[~mask]\n",
     "assert all(bike_stations.groupby(['station_name']).station_id.agg(lambda x: x.isna().all() or x.dropna().nunique() == 1))\n",
     "# id is Null or unique\n",
     "assert not bike_stations['station_id'].dropna().duplicated().any()\n",
@@ -109,7 +120,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dropping 3 duplicate rows.\n"
+      "Dropping 2 duplicate rows.\n"
      ]
     }
    ],
