--- a/pipeline/7-establish-panel.ipynb
+++ b/pipeline/7-establish-panel.ipynb
@@ -192,7 +192,7 @@
      "output_type": "stream",
      "text": [
       "Dropping 7991 (4%) point rows\n",
-      "Dropping 240 (0%) line rows\n",
+      "Dropping 240 (1%) line rows\n",
       "Dropping 3521 (1%) tract rows\n",
       "Dropping 0 (0%) comm rows\n"
      ]
@@ -242,13 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_agg(df):\n",
-    "    unit_aggs = {k: 'first' for k in ['UCMP','airport','lat','long',\n",
+    "    unit_aggs = {k: 'first' for k in ['UCMP','airport','lat','long','landarea',\n",
     "                                      'train_distance', 'train_contained', \n",
+    "                                      'bus_distance', 'bus_contained', \n",
     "                                       'bike_distance', 'bike_contained',\n",
     "                                        'uber_distance', 'uber_contained']}\n",
     "    time_aggs = {'rides':'sum','DNC':'max', 'is_weekend': 'max', 'dotw': 'max'}  \n",
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,6 +303,141 @@
     "    partial = (better - worse) / (1 - worse)  # Proportion of unexplained variance explained by better model.\n",
     "    better_name = full_name if full.rsquared > reduced.rsquared else reduced_name\n",
     "    print(\"better model = {}, R2 = {:.3f}, partial R2 = {:.3f}\".format(better_name, better, partial))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "better model = daily, R2 = 0.771, partial R2 = 0.072\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute the partial R2 of weekly vs daily. Only include non-treatment regressors.\n",
+    "formula = \"np.log1p(rides) ~ transit + (lat + long)**2 + I(lat**2) + I(long**2)\"\n",
+    "full = sm.OLS.from_formula(formula, point_panel_daily).fit()\n",
+    "reduced = sm.OLS.from_formula(formula, point_panel_weekly).fit()\n",
+    "partial_r2(full, reduced, \"daily\", \"weekly\")\n",
+    "# The weekly model actually has a slightly higher R2, \n",
+    "# meaning we're not great at explaining DOTW variation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>daily</th>\n",
+       "      <th>weekly</th>\n",
+       "      <th>ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.440307</td>\n",
+       "      <td>4.203192</td>\n",
+       "      <td>1.221749</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.025153</td>\n",
+       "      <td>1.32514</td>\n",
+       "      <td>1.292626</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mde</th>\n",
+       "      <td>0.009888</td>\n",
+       "      <td>0.02897</td>\n",
+       "      <td>2.929855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>effect_size</th>\n",
+       "      <td>1.747667</td>\n",
+       "      <td>3.233077</td>\n",
+       "      <td>1.849939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>power_achieved</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>t_stat</th>\n",
+       "      <td>495.171941</td>\n",
+       "      <td>312.65644</td>\n",
+       "      <td>0.63141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>is_detectable</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     daily     weekly     ratio\n",
+       "mean              3.440307   4.203192  1.221749\n",
+       "std               1.025153    1.32514  1.292626\n",
+       "mde               0.009888    0.02897  2.929855\n",
+       "effect_size       1.747667   3.233077  1.849939\n",
+       "power_achieved         1.0        1.0       1.0\n",
+       "t_stat          495.171941  312.65644   0.63141\n",
+       "is_detectable         True       True       1.0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Power analysis:\n",
+    "DNC_ATTEND = 5e4\n",
+    "effect_sum = 4 * 2 * DNC_ATTEND  # days in event * rides per day * attendees\n",
+    "\n",
+    "pd.concat([power_reg(full, np.log1p(effect_sum/len(point_panel_daily))).rename('daily'),\n",
+    "           power_reg(reduced, np.log1p(effect_sum/len(point_panel_weekly))).rename('weekly')],axis=1) \\\n",
+    "        .assign(ratio=lambda x: x['weekly']/x['daily'])\n",
+    "# The daily model has smaller residual variance but identical power achieved."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## with treatment model"
    ]
   },
   {
@@ -318,8 +454,8 @@
     }
    ],
    "source": [
-    "# Compute the partial R2 of weekly vs daily. Only include non-treatment regressors.\n",
-    "formula = \"np.log1p(rides) ~ transit + (lat + long)**2 + I(lat**2) + I(long**2)\"\n",
+    "# Compute the partial R2 of weekly vs daily. \n",
+    "formula = \"np.log1p(rides) ~ DNC * transit + (lat + long)**2 + I(lat**2) + I(long**2)\"\n",
     "full = sm.OLS.from_formula(formula, point_panel_daily).fit()\n",
     "reduced = sm.OLS.from_formula(formula, point_panel_weekly).fit()\n",
     "partial_r2(full, reduced, \"daily\", \"weekly\")\n",
@@ -355,141 +491,6 @@
        "      <th></th>\n",
        "      <th>daily</th>\n",
        "      <th>weekly</th>\n",
-       "      <th>ratio</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>3.440143</td>\n",
-       "      <td>4.201957</td>\n",
-       "      <td>1.221448</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>1.025104</td>\n",
-       "      <td>1.324865</td>\n",
-       "      <td>1.292419</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mde</th>\n",
-       "      <td>0.009887</td>\n",
-       "      <td>0.028959</td>\n",
-       "      <td>2.928939</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>effect_size</th>\n",
-       "      <td>1.747618</td>\n",
-       "      <td>3.232726</td>\n",
-       "      <td>1.84979</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>power_achieved</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>t_stat</th>\n",
-       "      <td>495.19644</td>\n",
-       "      <td>312.744557</td>\n",
-       "      <td>0.631557</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>is_detectable</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    daily      weekly     ratio\n",
-       "mean             3.440143    4.201957  1.221448\n",
-       "std              1.025104    1.324865  1.292419\n",
-       "mde              0.009887    0.028959  2.928939\n",
-       "effect_size      1.747618    3.232726   1.84979\n",
-       "power_achieved        1.0         1.0       1.0\n",
-       "t_stat          495.19644  312.744557  0.631557\n",
-       "is_detectable        True        True       1.0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Power analysis:\n",
-    "DNC_ATTEND = 5e4\n",
-    "effect_sum = 4 * 2 * DNC_ATTEND  # days in event * rides per day * attendees\n",
-    "\n",
-    "pd.concat([power_reg(full, np.log1p(effect_sum/len(point_panel_daily))).rename('daily'),\n",
-    "           power_reg(reduced, np.log1p(effect_sum/len(point_panel_weekly))).rename('weekly')],axis=1) \\\n",
-    "        .assign(ratio=lambda x: x['weekly']/x['daily'])\n",
-    "# The daily model has smaller residual variance but identical power achieved."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## with treatment model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "better model = daily, R2 = 0.771, partial R2 = 0.071\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Compute the partial R2 of weekly vs daily. \n",
-    "formula = \"np.log1p(rides) ~ DNC * transit + (lat + long)**2 + I(lat**2) + I(long**2)\"\n",
-    "full = sm.OLS.from_formula(formula, point_panel_daily).fit()\n",
-    "reduced = sm.OLS.from_formula(formula, point_panel_weekly).fit()\n",
-    "partial_r2(full, reduced, \"daily\", \"weekly\")\n",
-    "# The weekly model actually has a slightly higher R2, \n",
-    "# meaning we're not great at explaining DOTW variation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>daily</th>\n",
-       "      <th>weekly</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -500,18 +501,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>0.018314</td>\n",
-       "      <td>0.042378</td>\n",
+       "      <td>0.018315</td>\n",
+       "      <td>0.042387</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mde</th>\n",
        "      <td>0.000177</td>\n",
-       "      <td>0.000926</td>\n",
+       "      <td>0.000927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>effect_size</th>\n",
-       "      <td>1.747618</td>\n",
-       "      <td>3.232726</td>\n",
+       "      <td>1.747667</td>\n",
+       "      <td>3.233077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>power_achieved</th>\n",
@@ -520,8 +521,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>t_stat</th>\n",
-       "      <td>27717.774516</td>\n",
-       "      <td>9777.326135</td>\n",
+       "      <td>27716.354484</td>\n",
+       "      <td>9774.433074</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>is_detectable</th>\n",
@@ -535,15 +536,15 @@
       "text/plain": [
        "                       daily       weekly\n",
        "mean                     0.0          0.0\n",
-       "std                 0.018314     0.042378\n",
-       "mde                 0.000177     0.000926\n",
-       "effect_size         1.747618     3.232726\n",
+       "std                 0.018315     0.042387\n",
+       "mde                 0.000177     0.000927\n",
+       "effect_size         1.747667     3.233077\n",
        "power_achieved           1.0          1.0\n",
-       "t_stat          27717.774516  9777.326135\n",
+       "t_stat          27716.354484  9774.433074\n",
        "is_detectable           True         True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
