calculate bike station density

--- a/pipeline/6.1-spatial-features.ipynb
+++ b/pipeline/6.1-spatial-features.ipynb
@@ -24,17 +24,17 @@
    "source": [
     "train_file_in = \"../data/raw/train_stations.geojson\"\n",
     "bus_stops_file_in = \"../data/raw/bus_stops.geojson\"\n",
-    "bike_stations_file_in = \"../data/interim/bike_stations_gbfs.geoparquet\"\n",
     "tract_file_in = \"../data/raw/tracts.geojson\"\n",
     "comm_file_in = \"../data/raw/communities.geojson\"\n",
     "poi_file_in = \"../data/raw/poi_buildings.geojson\"\n",
     "\n",
+    "# The merge between bike stations and bike rides was really complicated (5.x notebooks)\n",
+    "# Now we operate on the bike_rides data because it has correct imputed geoms.\n",
     "bike_rides_in = \"../data/interim/bike_rides_v2.geoparquet\"\n",
     "\n",
     "train_stations_out = \"../data/interim/train_stations.geojson\"\n",
     "train_lines_out = \"../data/interim/train_lines.csv\"\n",
     "bus_stops_file_out = \"../data/interim/bus_stops.geojson\"\n",
-    "bike_stations_file_out = \"../data/interim/bike_stations_gbfs_v2.geojson\"\n",
     "tract_file_out = \"../data/interim/tracts.geoparquet\"\n",
     "comm_file_out = \"../data/interim/communities.geojson\"\n",
     "\n",
@@ -67,8 +67,7 @@
     "bus_stops = gpd.read_file(bus_stops_file_in)\n",
     "tract_points = gpd.read_file(tract_file_in)\n",
     "comm_points = gpd.read_file(comm_file_in)\n",
-    "poi_buildings = gpd.read_file(poi_file_in)\n",
-    "bike_stations = gpd.read_parquet(bike_stations_file_in)"
+    "poi_buildings = gpd.read_file(poi_file_in)"
    ]
   },
   {
@@ -200,7 +199,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_stations['airport'] = 0.0\n",
     "bike_rides['airport'] = 0.0"
    ]
   },
@@ -261,12 +259,10 @@
    "source": [
     "# Stations are coded as \n",
     "train_stations = train_stations.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
-    "bike_stations = bike_stations.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
     "bike_rides = bike_rides.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
     "bus_stops = bus_stops.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
     "\n",
     "train_stations = train_stations.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
-    "bike_stations = bike_stations.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
     "bike_rides = bike_rides.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
     "bus_stops = bus_stops.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])"
    ]
@@ -334,7 +330,6 @@
    "outputs": [],
    "source": [
     "train_stations = train_stations.pipe(code_tract)\n",
-    "bike_stations = bike_stations.pipe(code_tract)\n",
     "bike_rides = bike_rides.pipe(code_tract)\n",
     "bus_stops = bus_stops.pipe(code_tract)"
    ]
@@ -455,7 +450,7 @@
    "outputs": [],
    "source": [
     "tract_points = tract_points.pipe(access_stats, train_stations[['tract','geometry']], 'train', 'geoid10', 'tract')\n",
-    "tract_points = tract_points.pipe(access_stats, bike_stations[['tract','geometry']], 'bike', 'geoid10', 'tract')\n",
+    "tract_points = tract_points.pipe(access_stats, bike_rides[['tract','geometry']], 'bike', 'geoid10', 'tract')\n",
     "tract_points = tract_points.pipe(access_stats, bus_stops[['tract','geometry']], 'bus', 'geoid10', 'tract')"
    ]
   },
@@ -466,7 +461,7 @@
    "outputs": [],
    "source": [
     "comm_points = comm_points.pipe(access_stats, train_stations[['comm_area','geometry']], 'train', 'comm_area', 'comm_area')\n",
-    "comm_points = comm_points.pipe(access_stats, bike_stations[['comm_area','geometry']], 'bike', 'comm_area', 'comm_area')\n",
+    "comm_points = comm_points.pipe(access_stats, bike_rides[['comm_area','geometry']], 'bike', 'comm_area', 'comm_area')\n",
     "comm_points = comm_points.pipe(access_stats, bus_stops[['comm_area','geometry']], 'bus', 'comm_area', 'comm_area')"
    ]
   },
@@ -476,10 +471,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_stations = train_stations.pipe(access_stats, bike_stations[['tract','geometry']], 'bike', 'tract', 'tract')\n",
+    "# Yes it's silly putting self-distance, but it just makes merging the frames easier later.\n",
+    "train_stations = train_stations.pipe(access_stats, train_stations[['tract','geometry']], 'train', 'tract', 'tract')\n",
+    "train_stations = train_stations.pipe(access_stats, bike_rides[['tract','geometry']], 'bike', 'tract', 'tract')\n",
     "train_stations = train_stations.pipe(access_stats, bus_stops[['tract','geometry']], 'bus', 'tract', 'tract')\n",
-    "bike_stations = bike_stations.pipe(access_stats, train_stations[['tract','geometry']], 'train', 'tract', 'tract')\n",
-    "bike_stations = bike_stations.pipe(access_stats, bus_stops[['tract','geometry']], 'bus', 'tract', 'tract')"
+    "bike_rides = bike_rides.pipe(access_stats, train_stations[['tract','geometry']], 'train', 'tract', 'tract')\n",
+    "bike_rides = bike_rides.pipe(access_stats, bike_rides[['tract','geometry']], 'bike', 'tract', 'tract')\n",
+    "bike_rides = bike_rides.pipe(access_stats, bus_stops[['tract','geometry']], 'bus', 'tract', 'tract')"
    ]
   },
   {
@@ -498,19 +496,9 @@
     "voronoi = train_stations.to_crs(LOCAL_CRS).voronoi_polygons().clip(tract_points.to_crs(LOCAL_CRS).envelope)\n",
     "train_stations = train_stations.assign(landarea = voronoi.area.apply(np.sqrt).apply(foot_to_meter))\n",
     "\n",
-    "voronoi = bike_stations.to_crs(LOCAL_CRS).voronoi_polygons().clip(tract_points.to_crs(LOCAL_CRS).envelope)\n",
-    "bike_stations = bike_stations.assign(landarea = voronoi.area.apply(np.sqrt).apply(foot_to_meter))\n",
-    "\n",
     "tract_points = tract_points.assign(landarea = tract_points.to_crs(LOCAL_CRS).area.apply(np.sqrt).apply(foot_to_meter))\n",
-    "comm_points = comm_points.assign(landarea = comm_points.to_crs(LOCAL_CRS).area.apply(np.sqrt).apply(foot_to_meter))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "comm_points = comm_points.assign(landarea = comm_points.to_crs(LOCAL_CRS).area.apply(np.sqrt).apply(foot_to_meter))\n",
+    "\n",
     "bike_ride_stations = bike_rides.geometry.drop_duplicates()\n",
     "voronoi = bike_ride_stations.to_crs(LOCAL_CRS).voronoi_polygons().clip(tract_points.to_crs(LOCAL_CRS).envelope)\n",
     "voronoi = dict(zip(bike_ride_stations, voronoi))\n",
@@ -526,20 +514,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_stations.to_file(train_stations_out, index=False)\n",
     "bus_stops.to_file(bus_stops_file_out, index=False)\n",
-    "bike_stations.to_file(bike_stations_file_out, index=False)\n",
     "tract_points.to_parquet(tract_file_out, index=False)\n",
     "comm_points.to_file(comm_file_out, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
