fix balance table to reflect separate models

--- a/notebooks/replication/dnc-effect/first-glance.ipynb
+++ b/notebooks/replication/dnc-effect/first-glance.ipynb
@@ -2,43 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "import plotly.express as px\n",
-    "\n",
-    "from data.constants import DATA_FOLDER"
+    "import plotly.express as px"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "point_panel_in = os.path.join(DATA_FOLDER, \"final\", \"point_panel.parquet\")\n",
-    "line_panel_in = os.path.join(DATA_FOLDER, \"final\", \"line_panel.parquet\")\n",
-    "tract_panel_in = os.path.join(DATA_FOLDER, \"final\", \"tract_panel.parquet\")"
+    "point_panel_in = \"../../../data/final/point_panel.parquet\"\n",
+    "line_panel_in = \"../../../data/final/line_panel.parquet\"\n",
+    "tract_panel_in = \"../../../data/final/tract_panel.parquet\"\n",
+    "comm_panel_in = \"../../../data/final/comm_panel.parquet\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "point_panel = pd.read_parquet(point_panel_in)\n",
     "line_panel = pd.read_parquet(line_panel_in)\n",
-    "tract_panel = pd.read_parquet(tract_panel_in)"
+    "tract_panel = pd.read_parquet(tract_panel_in)\n",
+    "comm_panel = pd.read_parquet(comm_panel_in)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,67 +60,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Avg daily rides on all CTA 0.8M'"
+       "'Avg daily rides on all CTA 790.6K (SD 139.6K)'"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "total = cta_panel.groupby('date')['rides'].sum()\n",
-    "f\"Avg daily rides on all CTA {total.mean() / 1e6:.1f}M\""
+    "f\"Avg daily rides on all CTA {total.mean() / 1e3 :.1f}K (SD {total.std() / 1e3 :.1f}K)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Avg daily rides at UC/MP 147k'"
+       "'Avg daily rides at UC/MP 147K (SD 27.1K)'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "total = cta_panel[cta_panel.UCMP == 1].groupby('date')['rides'].sum()\n",
-    "f\"Avg daily rides at UC/MP {total.mean() / 1e3:.0f}k\""
+    "f\"Avg daily rides at UC/MP {total.mean() / 1e3:.0f}K (SD {total.std() / 1e3 :.1f}K)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Avg daily rides on LINES serving UC/MP 325k\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Avg daily rides on LINES serving UC/MP 325K (SD 52.4K)'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "total = line_panel[line_panel.UCMP == 1].groupby(['date'])['rides'].sum().mean()\n",
-    "print(f\"Avg daily rides on LINES serving UC/MP {total / 1e3:.0f}k\")"
+    "total = line_panel[line_panel.UCMP == 1].groupby(['date'])['rides'].sum()\n",
+    "f\"Avg daily rides on LINES serving UC/MP {total.mean() / 1e3:.0f}K (SD {total.std() / 1e3 :.1f}K)\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +182,6 @@
       "         rides  ntracts\n",
       "transit                \n",
       "bike         6       37\n",
-      "bus        256       43\n",
       "train       31       14\n",
       "uber        33       40\n"
      ]
@@ -197,12 +199,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Misc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1260, 77)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tract_panel.id.nunique(), comm_panel.id.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# TS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
